--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li><a href="intro.html" target="_blank" rel="noopener noreferrer"> My Intro</a></li>
                     <li> <a href="services.html" target="_blank" rel="noopener noreferrer"> Services</a></li>
                     <li><a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html" target="_blank" rel="noopener noreferrer">Contect Me</a></li>
+                    <li><a href="contact.html" target="_blank" rel="noopener noreferrer">Contact Me</a></li>
                 </ul>
             </nav>
 
@@ -33,8 +33,8 @@
                             and i Love to tinker with computers.
                         </div>
                         <div class="buttons">
-                            <button>Download CV</button>
-                            <button>Contact Me</button>
+                            <a href="cv.pdf"> <button>Download CV</button> </a>
+                           <a href="contact.html"> <button>Contact Me</button> </a>
                         </div>
                 </div>
                 <div class="devpic">
