--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             and i Love to tinker with computers.
                         </div>
                         <div class="buttons">
-                            <a href="cv.pdf"> <button>Download CV</button> </a>
+                            <a href="grvCV.pdf" target="_blank"> <button>Download CV</button> </a>
                            <a href="contact.html"> <button>Contact Me</button> </a>
                         </div>
                 </div>
