--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="blog.css">
 </head>
 
 <body>
@@ -24,23 +25,29 @@
 
         </div>
         <div class="main">
-            <div class="infocontainer">
-                <div class="devInfo"> 
-                        <div class="hello"> Hi I am</div>
-                        <div class="name">Gaurav Gautam Shakya</div>
-                        <div class="about">Developer, Linux Administrator, System Designer</div>
-                        <div class="aboutmore">I am currently persuing my Bachalor of Technology In Electrical Engineering
-                            and i Love to tinker with computers.
-                        </div>
-                        <div class="buttons">
-                            <button>Download CV</button>
-                            <button>Contact Me</button>
-                        </div>
-                </div>
-                <div class="devpic">
-                        <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
-                </div>
+           <div class="blogContainer">
+            <h1>Blogs By Gaurav The Great</h1>
+            <div class="blogItem">
+                <h2>Learning Linux is fun</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
+                <button class="btn btn-sm">Read more</button>
             </div>
+            <div class="blogItem">
+                <h2>Learning Linux is fun</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
+                <button class="btn btn-sm">Read more</button>
+            </div>
+            <div class="blogItem">
+                <h2>Learning Linux is fun</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
+                <button class="btn btn-sm">Read more</button>
+            </div>
+            <div class="blogItem">
+                <h2>Learning Linux is fun</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
+                <button class="btn btn-sm">Read more</button>
+            </div>
+           </div>
         </div>
     </div>
 </body>
