--- a/intro.html
+++ b/intro.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="intro.css">
 </head>
 
 <body>
@@ -25,23 +26,24 @@
         </div>
         <div class="main">
             <div class="infocontainer">
-                <div class="devInfo"> 
-                        <div class="hello"> Hi I am</div>
-                        <div class="name">Gaurav Gautam Shakya</div>
-                        <div class="about">Developer, Linux Administrator, System Designer</div>
-                        <div class="aboutmore">I am currently persuing my Bachalor of Technology In Electrical Engineering
-                            and i Love to tinker with computers.
-                        </div>
-                        <div class="buttons">
-                            
-                            <button>Download CV</button>
-                            <button>Contact Me</button>
+                <div class="introContainer"> 
+                        <h1>About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab, corrupti eaque quos magnam deserunt est facilis, voluptatum voluptate atque ex. Harum, eligendi. Odit itaque suscipit ea soluta dolores, odio error, totam amet reprehenderit quibusdam minus obcaecati voluptatem consequuntur temporibus, accusantium corrupti inventore assumenda libero repellendus! Cumque, laboriosam porro?</p>
+                        <h2>My Skills</h2>
+                        <div class="mySkillContainer">
+                            <div class="skills">Linux</div>
+                            <div class="skills">Git</div>
+                            <div class="skills">Yaml</div>
+                            <div class="skills">Docker</div>
+                            <div class="skills">Kubernates</div>
+                            <div class="skills">Vagrant</div>
+                            <div class="skills">Ansible</div>
+                            <div class="skills">BA$H</div>
+
 
                         </div>
                 </div>
-                <div class="devpic">
-                        <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
-                </div>
+                <div class="devpic"> <img src="images/devPic.png" alt="Gaurav Gautam Shakya"> </div>
             </div>
         </div>
     </div>
