target=_blank removed

--- a/blog.html
+++ b/blog.html
@@ -16,10 +16,10 @@
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
-                    <li><a href="intro.html" target="_blank" rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html" target="_blank" rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html" target="_blank" rel="noopener noreferrer">Contect Me</a></li>
+                    <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
+                    <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
+                    <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="contact.html"  rel="noopener noreferrer">Contect Me</a></li>
                 </ul>
             </nav>
 
