--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Website</title>
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 
 <body>
@@ -14,16 +15,22 @@
         <div class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="/"> Home</a></li>
-                    <li><a href="intro.html" target="_blank" rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html" target="_blank" rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html" target="_blank" rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html" target="_blank" rel="noopener noreferrer">Contact Me</a></li>
+                    <li><a href="index.html"> Home</a></li>
+                    <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
+                    <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
+                    <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="contact.html" rel="noopener noreferrer">Contact Me</a></li>
                 </ul>
             </nav>
 
         </div>
         <div class="main">
+
+                <!-- <div class="hamberger">
+                    <img src="images/hem.png" class="ham" alt="hamberger image" width="23">
+                    <img src="images/cross.png" class="cross" alt="cross image" width="23">
+                </div> -->
+
             <div class="infocontainer">
                 <div class="devInfo"> 
                         <div class="hello"> Hi I am</div>
@@ -43,6 +50,7 @@
             </div>
         </div>
     </div>
+    <script src="/script.js"></script>
 </body>
 
 </html>
