--- a/services.html
+++ b/services.html
@@ -43,6 +43,28 @@
             </div>
         </div>
     </div>
+    <div class="footerContainer">
+        <div class="col-1">
+            <h3>UseFul links</h3>
+            <a href="https://www.linkedin.com/in/gaurav-gautam-shakya-04a8b3191/" target="_blank">Linkedin</a>
+            <a href="https://github.com/0563gaurav" target="_blank">GitHub</a>
+            <a href="https://www.hackerrank.com/hartik363" target="_blank">Hackerrank</a>
+            <a href="https://play.picoctf.org/practice?category=6&page=1" target="_blank">picoCTF</a>
+        </div>
+        <div class="col-2">
+            <h3>Interest</h3>
+
+            <img src="images/copyright-symbol.png" alt="copyright-symbol">
+            <h6>copyright 2023 grv.Notes.com</h6>
+
+        </div>
+        <div class="col-3">
+            <h3>Contact</h3>
+            <p>Nagla Kunwar Kharbandi Nagla Bajir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+
+        </div>
+    </div>
+
 </body>
 
 </html>
