--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Website</title>
     <link rel="stylesheet" href="styles.css">
-    
+
 </head>
 
 <body>
@@ -16,9 +16,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html"> Home</a></li>
-                    <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="intro.html" rel="noopener noreferrer"> My Intro</a></li>
+                    <li> <a href="services.html" rel="noopener noreferrer"> Services</a></li>
+                    <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
                     <li><a href="contact.html" rel="noopener noreferrer">Contact Me</a></li>
                 </ul>
             </nav>
@@ -26,28 +26,51 @@
         </div>
         <div class="main">
 
-                <!-- <div class="hamberger">
+            <!-- <div class="hamberger">
                     <img src="images/hem.png" class="ham" alt="hamberger image" width="23">
                     <img src="images/cross.png" class="cross" alt="cross image" width="23">
                 </div> -->
 
             <div class="infocontainer">
-                <div class="devInfo"> 
-                        <div class="hello"> Hi I am</div>
-                        <div class="name">Gaurav Gautam Shakya</div>
-                        <div class="about">Developer, Linux Administrator, System Designer</div>
-                        <div class="aboutmore">I am currently persuing my Bachalor of Technology In Electrical Engineering
-                            and i Love to tinker with computers.
-                        </div>
-                        <div class="buttons">
-                            <a href="grvCV.pdf" target="_blank"> <button>Download CV</button> </a>
-                           <a href="contact.html"> <button>Contact Me</button> </a>
-                        </div>
+                <div class="devInfo">
+                    <div class="hello"> Hi I am</div>
+                    <div class="name">Gaurav Gautam Shakya</div>
+                    <div class="about">Developer, Linux Administrator, System Designer</div>
+                    <div class="aboutmore">I am currently persuing my Bachalor of Technology In Electrical Engineering
+                        and i Love to tinker with computers.
+                    </div>
+                    <div class="buttons">
+                        <a href="grvCV.pdf" target="_blank"> <button>Download CV</button> </a>
+                        <a href="contact.html"> <button>Contact Me</button> </a>
+                    </div>
                 </div>
                 <div class="devpic">
-                        <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
+                    <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
                 </div>
             </div>
+        </div>
+
+
+    </div>
+    <div class="footerContainer">
+        <div class="col-1">
+            <h3>UseFul links</h3>
+            <a href="https://www.linkedin.com/in/gaurav-gautam-shakya-04a8b3191/" target="_blank">Linkedin</a>
+            <a href="https://github.com/0563gaurav" target="_blank">GitHub</a>
+            <a href="https://www.hackerrank.com/hartik363" target="_blank">Hackerrank</a>
+            <a href="https://play.picoctf.org/practice?category=6&page=1" target="_blank">picoCTF</a>
+        </div>
+        <div class="col-2">
+            <h3>Interest</h3>
+
+            <img src="images/copyright-symbol.png" alt="copyright-symbol">
+            <h6>copyright 2023 grv.Notes.com</h6>
+
+        </div>
+        <div class="col-3">
+            <h3>Contact</h3>
+            <p>Nagla Kunwar Kharbandi Nagla Bajir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+
         </div>
     </div>
     <script src="/script.js"></script>
