In footer Develper Image added

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
             <h3>Interest</h3>
 
             <img src="images/copyright-symbol.png" alt="copyright-symbol">
-            <h6>copyright 2023 grv.Notes.com</h6>
+            <h6>copyright 2023 grv.notes.com</h6>
+            <div class="developerPhoto">
+                <img src="images/gaurav.jpeg" alt="Developer Photo">
+            </div>
+            
 
         </div>
         <div class="col-3">
