Gaurav Photo updated

--- a/intro.html
+++ b/intro.html
@@ -16,32 +16,52 @@
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
-                    <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html"  rel="noopener noreferrer">Contect Me</a></li>
+                    <li><a href="intro.html" rel="noopener noreferrer"> My Intro</a></li>
+                    <li> <a href="services.html" rel="noopener noreferrer"> Services</a></li>
+                    <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="contact.html" rel="noopener noreferrer">Contect Me</a></li>
                 </ul>
             </nav>
 
         </div>
         <div class="main">
             <div class="infocontainer">
-                <div class="introContainer"> 
+                <div class="introContainer">
+                    <div class="aboutme">
                         <h1>About Me</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab, corrupti eaque quos magnam deserunt est facilis, voluptatum voluptate atque ex. Harum, eligendi. Odit itaque suscipit ea soluta dolores, odio error, totam amet reprehenderit quibusdam minus obcaecati voluptatem consequuntur temporibus, accusantium corrupti inventore assumenda libero repellendus! Cumque, laboriosam porro?</p>
-                        <h2>My Skills</h2>
-                        <div class="mySkillContainer">
-                            <div class="skills">Linux</div>
-                            <div class="skills">Git</div>
-                            <div class="skills">Yaml</div>
-                            <div class="skills">Docker</div>
-                            <div class="skills">Kubernates</div>
-                            <div class="skills">Vagrant</div>
-                            <div class="skills">Ansible</div>
-                            <div class="skills">BA$H</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab, corrupti eaque quos
+                            magnam
+                            deserunt est facilis, voluptatum voluptate atque ex. Harum, eligendi. Odit itaque suscipit
+                            ea
+                            soluta dolores, odio error, totam amet reprehenderit quibusdam minus obcaecati voluptatem
+                            consequuntur temporibus, accusantium corrupti inventore assumenda libero repellendus!
+                            Cumque,
+                            laboriosam porro?</p>
+                    </div>
 
-
-                        </div>
+                    <div class="education">
+                        <h2>My Education</h2>
+                        <h4>B.Tech</h4>
+                        <p>Harcourt Butler Technical University <br> Kanpur, India CGPA-6.515 <br> 07/2019 - Present
+                            <br>Courses <br> Electrical Engineering </p>
+                        <h4>InterMediate</h4>
+                        <p>SHRI BSDS I C BARRA GHUMAN, HARDOI <br> Hardoi, India Aggregate-85% <br> 07/2016 - 04/2018
+                            <br> PCM</p>
+                        <h4>High-school</h4>
+                        <p>S V M HSS NAGAR B PATTI FARRUKHABAD <br> Farrukhabad, India Aggregate-90% <br> 07/2015 -
+                            05/2016 <br> PCM</p>
+                    </div>
+                    <h2>My Skills</h2>
+                    <div class="mySkillContainer">
+                        <div class="skills">Linux</div>
+                        <div class="skills">Git</div>
+                        <div class="skills">Yaml</div>
+                        <div class="skills">Docker</div>
+                        <div class="skills">Kubernates</div>
+                        <div class="skills">Vagrant</div>
+                        <div class="skills">Ansible</div>
+                        <div class="skills">BA$H</div>
+                    </div>
                 </div>
                 <div class="devpic"> <img src="images/devPic.png" alt="Gaurav Gautam Shakya"> </div>
             </div>
@@ -59,7 +79,7 @@
             <h3>Interest</h3>
 
             <img src="images/copyright-symbol.png" alt="copyright-symbol">
-            <h6>copyright 2023 grv.notes.com</h6>
+            <h6>Copyright 2023 grv.notes.com</h6>
             <div class="developerPhoto">
                 <img src="images/gaurav.jpeg" alt="Developer Photo">
             </div>
@@ -67,7 +87,7 @@
         </div>
         <div class="col-3">
             <h3>Contact</h3>
-            <p>Nagla Kunwar Kharbandi Nagla Bajir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
 
         </div>
     </div>
