--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
             <h3>Interest</h3>
 
             <img src="images/copyright-symbol.png" alt="copyright-symbol">
-            <h6>copyright 2023 grv.notes.com</h6>
+            <h6>Copyright 2023 grv.notes.com</h6>
             <div class="developerPhoto">
                 <img src="images/gaurav.jpeg" alt="Developer Photo">
             </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="col-3">
             <h3>Contact</h3>
-            <p>Nagla Kunwar Kharbandi Nagla Bajir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
 
         </div>
     </div>
