--- a/intro.html
+++ b/intro.html
@@ -29,14 +29,10 @@
                 <div class="introContainer">
                     <div class="aboutme">
                         <h1>About Me</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore ab, corrupti eaque quos
-                            magnam
-                            deserunt est facilis, voluptatum voluptate atque ex. Harum, eligendi. Odit itaque suscipit
-                            ea
-                            soluta dolores, odio error, totam amet reprehenderit quibusdam minus obcaecati voluptatem
-                            consequuntur temporibus, accusantium corrupti inventore assumenda libero repellendus!
-                            Cumque,
-                            laboriosam porro?</p>
+                        <p>My name is Gaurav Gautam Shakya. I belong to Nagla Kunwar Kharbandi Nagla wazir Farrukhabad.There are 8 
+                            people in my family.Father(Shri Atar Singh Shakya) Mother(Smt. Malti Devi Shakya) GrandFather(Shri Patiram
+                            Shakya) GrandMother( Smt. RamDevi Shakya) Elder Sister( Late RajNandini Gautam Shakya) Sister( Nishi Shakya) Elder Brother( Ravi Gautam Shakya)
+                            Middle Brother( Vijay Gautam Shakya) and Me(Youngest). My Father is a Farmer.</p>
                     </div>
 
                     <div class="education">
