--- a/index.html
+++ b/index.html
@@ -36,13 +36,30 @@
                     <div class="hello"> Hi I am</div>
                     <div class="name">Gaurav Gautam Shakya</div>
                     <div class="about">Developer, Linux Administrator, System Designer</div>
-                    <div class="aboutmore">I am currently persuing my Bachalor of Technology In Electrical Engineering
-                        and i Love to tinker with computers.
+                    <div class="aboutmore">I am currently pursuing my Bachelor of Technology In Electrical Engineering
+                        and I Love to engineer things and solve problems.
+                    </div>
+                    <div class="extra">
+                        <p> I am huge fan of linux open-source technologies because this gives me freedom to explore the
+                            world which usually remain hidden underneath by some proprietary licences. I also find
+                            exciting
+                            building, configuring, installing, using and sharing the programs among peers. All this led
+                            me
+                            to choose Devops Engineer as my profession. I hope my skills and knowledge could make some
+                            contribution to the society.
+                        </p>
+                        <div class="qoutes">
+                            <h3>Science does not know it's debt to imagination. </h3>
+                            <h4>- Ralph Waldo Emerson</h4>
+                            <h3>Simplicity is the ultimate sophistication.</h3>
+
+                        </div>
                     </div>
                     <div class="buttons">
                         <a href="grvCV.pdf" target="_blank"> <button>Download CV</button> </a>
                         <a href="contact.html"> <button>Contact Me</button> </a>
                     </div>
+
                 </div>
                 <div class="devpic">
                     <img src="images/devPic.png" alt="Gaurav Gautam Shakya">
@@ -68,7 +85,7 @@
             <div class="developerPhoto">
                 <img src="images/gaurav.jpeg" alt="Developer Photo">
             </div>
-            
+
 
         </div>
         <div class="col-3">
