blog added and Content remianed to be updated

--- a/blog.html
+++ b/blog.html
@@ -16,38 +16,46 @@
             <nav>
                 <ul>
                     <li><a href="/"> Home</a></li>
-                    <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
-                    <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
-                    <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
-                    <li><a href="contact.html"  rel="noopener noreferrer">Contect Me</a></li>
+                    <li><a href="intro.html" rel="noopener noreferrer"> My Intro</a></li>
+                    <li> <a href="services.html" rel="noopener noreferrer"> Services</a></li>
+                    <li><a href="blog.html" rel="noopener noreferrer">Blog</a></li>
+                    <li><a href="contact.html" rel="noopener noreferrer">Contect Me</a></li>
                 </ul>
             </nav>
 
         </div>
         <div class="main">
-           <div class="blogContainer">
-            <h1>Blogs By Gaurav The Great</h1>
-            <div class="blogItem">
-                <h2>Learning Linux is fun</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
-                <button class="btn btn-sm">Read more</button>
+            <div class="blogContainer">
+                <h1>Blogs By Gaurav The Great</h1>
+                <div class="blogItem">
+                    <h2>How to get Help From Built-in Help System in Linux</h2>
+                    <p>We all Know that in Linux system there are two seperate User-Interface. <br>
+                        1. Command- line Interface (CLI). eg Bash, zsh, csh ... <br>
+                        2. Graphical-user Interface/Desktop Environment ( GUI/DE) . e.g Gnome , KDE , xfce , lxde ...
+                    </p>
+                    <a href="blogs/blog1.html"><button class="btn btn-sm">Read more</button> </a> 
+                </div>
+                <div class="blogItem">
+                    <h2>How use Bluetooth on linux terminal</h2>
+                    <p>First all you have to check whether you buletooth service daemon is running or not. To check run
+                        the command below: <br>
+                        $ sudo systemctl status bluetooth <br> ... </p>
+                   <a href="blogs/blog2.html"> <button class="btn btn-sm">Read more</button> </a>
+                </div>
+                <div class="blogItem">
+                    <h2>How to know the hardware specification with the help of terminal in linux</h2>
+                    <p>To know the Hardware specification of your computer/laptop(linux installed). There are lot of
+                        command which can be used to know the specification of your system. There are list of commands
+                        which we will use to know all about your system ...</p>
+                   <a href="blogs/blog3.html"><button class="btn btn-sm">Read more</button> </a> 
+                </div>
+                <div class="blogItem">
+                    <h2>How to see boot signature(0xaa55) of your bootable device in linux terminal.</h2>
+                    <p>In this Article , I will show how you can check whether you storage media(usb drive,Hard-disk,ssd, cd/dvd) is bootable or not in linux terminal.
+                       <br> Disclaimer: for this Root priviliges are required.</p>
+                  <a href="blogs/blog4.html"> <button class="btn btn-sm">Read more</button> </a> 
+                </div>
             </div>
-            <div class="blogItem">
-                <h2>Learning Linux is fun</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
-                <button class="btn btn-sm">Read more</button>
-            </div>
-            <div class="blogItem">
-                <h2>Learning Linux is fun</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
-                <button class="btn btn-sm">Read more</button>
-            </div>
-            <div class="blogItem">
-                <h2>Learning Linux is fun</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, corrupti modi repellendus reiciendis eligendi minima et ducimus sint numquam incidunt officiis magnam odit corporis harum iusto sed itaque ipsam minus.</p>
-                <button class="btn btn-sm">Read more</button>
-            </div>
-           </div>
         </div>
     </div>
     <div class="footerContainer">
