4 blog added but not decorated

--- a/blogs/blog2.html
+++ b/blogs/blog2.html
@@ -33,8 +33,23 @@
                     <h2>How use Bluetooth on linux terminal</h2>
                     <p>First all you have to check whether you buletooth service daemon is running or not. To check run
                         the command below: <br>
-                        $ sudo systemctl status bluetooth <br> ... </p>
-                    
+                        $ sudo systemctl status bluetooth <br>
+                        <img src="blog2_images/1.png" alt=" 1st image"> <br>
+                        Now bluetooth service is running. then you use camonnad below to handle the bluetooth operation:
+                        <br> $ bluetoothctl <br>
+                        <img src="blog2_images/2.png" alt="2nd image"> <br>
+                        After firing the buletoothctl command, there are lot of option to use for a specific purpose.To
+                        see all the option type "help" on the terminal an hit enter key. <br>
+                        <img src="blog2_images/3.png" alt="3rd Image">
+                        For example If you want to get the information about the connected ot paired device then fallow
+                        the step below:- <br>
+                        <img src="blog2_images/4.png" alt="4th image"> <br>
+                        In above example 0C:E0:DC:B2:AB id MAC(media access control) address of the device.
+                        Now you got idea how to use "buletoothctl" command. if you got stuck then you can comment below
+                        i will there for you to help. <br>
+                        Thank you
+                    </p>
+
                 </div>
 
 
