--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -34,7 +34,101 @@
                         1. Command- line Interface (CLI). eg Bash, zsh, csh ... <br>
                         2. Graphical-user Interface/Desktop Environment ( GUI/DE) . e.g Gnome , KDE , xfce , lxde ...
                     </p>
-                    
+                    <h4>Prerequisite -- Vim Editor Keybindings only.</h4>
+                    <p>It is quite obvious for begainners/Intermediates to forget command and it's important
+                        flags(options). it sometime becomes very frustrating to re-call the flags(option) at time of
+                        firing command on the terminal. It becomes time-consuming if you don't have internet connection
+                        or hardcopy of documentation.
+                        Soution of this problem is to master the linux built-in help system (man-pages).
+                        <br>there two ways to get help in linux: <br>
+                        1. Man-Pages(manual pages) --> Concise Iformation. <br>
+                        2. Info-pages(Information pages) --> comprehensive Information. <br>
+                        NOTE-- Objective of this article is to get hands-on on man-pages only. <br>
+                        Let's start. <br>
+                        Man is command to get help in linux <br>
+                        Syntax: man [man options] command/Keyword <br>
+                        examples: <br>
+                        $man ls <br>
+                        $man man <br>
+                        $man cat <br>
+                        I assume that you want to know about ls command , what is it . what is does ,what are different
+                        flags associated with ls. <br>
+                        <img src="blog1_images/1.png" alt="first Image"> <br>
+                        Output: <br>
+                        <img src="blog1_images/2.png" alt=" 2nd Image"> <br>
+                        Man-pages are divided into 9-sections for making it modular. <br>
+                        Sections: <br>
+                        1 Executable programs or shell commands --> Helpful for standard user(beginner) <br>
+                        2 System calls (functions provided by the kernel) --> section 2,3 are very important for
+                        programmers. <br>
+                        3 Library calls (functions within program libraries) <br>
+                        4 Special files (usually found in /dev) <br>
+                        5 File formats and conventions, e.g. /etc/passwd <br>
+                        6 Games <br>
+                        7 Miscellaneous (including macro packages and conventions), e.g. man(7), groff(7) <br>
+                        8 System administration commands (usually only for root) --> Helpful for System Administrartor
+                        <br>
+                        9 Kernel routines [Non standard] <br>
+                        How to read Man-pages quickly -- <br>
+                        convention while reading man-pages- <br>
+                        bold text ----> type exactly as shown. <br>
+                        italic text ----> replace with appropriate argument. <br>
+                        [-abc] ----> any or all arguments within [ ] are optional. <br>
+                        -a|-b ----->options delimited by | cannot be used together. <br>
+                        argument ... ----> argument is repeatable. <br>
+                        [expression] ... ---> entire expression within [ ] is repeatable. <br>
+                        NOTE: conventions are very very Important. Alway try to remeber it. <br>
+                        Searching for man-pages-- <br>
+                        Syntax : man -k keywod ... <br>
+                        Example: <br>
+                        man -k reboot <br>
+                        man -k ssh <br>
+                        If you want to know about how to update password or some deatail about user-account and group.
+                        <br>
+                        <img src="blog1_images/3.png" alt="3rd image"> <br>
+                        In the above picture first line --
+                        chgpasswd(8) ---means--> chgpasswd can be file/command/configuration-file ans 8 indicate section
+                        of man-page.
+                        If you want to know about more about chgpasswd. then do this . <br>
+                        <img src="blog1_images/4.png" alt="4th image "> <br>
+                        Output: <br>
+                        <img src="blog1_images/5.png" alt="5th image"> <br>
+                        Man-pages Navigation- <br>
+                        j --->Farwar one line <br>
+                        k ---> Backward One line <br>
+                        ctrl+f ---> Farward One Window/page <br>
+                        ctrl+b ---> Backwawd one Window/page <br>
+                        g ---> Go to last line in the file (or line N) <br>
+                        G(shift+g) ---> Go to first line in the file (or line N) <br>
+                        Searching Within a man-pages- <br>
+                        /pattern ---> Search farward for matching line <br>
+                        ?Pattern ---> Search Backward for matching line <br>
+                        n ---> repeat previous search <br>
+                        N(shift+n) ---> repeat previous search in reverse direction. <br>
+                        ESC-u ---> undo (toggel)search highlighting. <br>
+                        NOTE: type "h" for additional infromation while inside man and type "q" to quit. <br>\
+                        Note: There are two type shell command <br>
+                        1. External command <br>
+                        2. Built-in command <br>
+                        Built-in commands do not have man-pages. <br>
+                        Getting Help for Built-in command: <br>
+                        syantax: help command <br>
+                        example: <br>
+                        help cd <br>
+                        help while <br>
+                        help alias <br>
+                        <img src="blog1_images/6.png" alt="6th image"> <br>
+                        Determine type of command: <br>
+                        syntax: type command <br>
+                        example: <br>
+                        type cd <br>
+                        type ls <br>
+                        type systemctl <br>
+                        <img src="blog1_images/7.png" alt="7th image"> <br>
+                        Thank You for Reading.
+
+                    </p>
+
                 </div>
 
 
