--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -32,8 +32,28 @@
                     <h2>How to know the hardware specification with the help of terminal in linux</h2>
                     <p>To know the Hardware specification of your computer/laptop(linux installed). There are lot of
                         command which can be used to know the specification of your system. There are list of commands
-                        which we will use to know all about your system ...</p>
-                    
+                        which we will use to know all about your system. <br>
+                        General commands for hardware specification - <br>
+                        NOTE:- You can use these command with or without sudo. If you use without sudo then it will not
+                        <br> let you see the priviliged detail. <br>
+                        1. dmidecode <br>
+                        2. lshw <br>
+                        3. hwinfo <br>
+                        <br> 4. /proc filesystem --> /proc filesysem is window to the live running linux kernel.
+                        <br> NOTE- Above listed every command can be used to for all type of devices. <br>
+                        List of some Commands for specific device- <br>
+                        1. lscpu --> List cpu cores. <br>
+                        2. lspci --> List PCI(Peripheral Component Interconnect) devices. <br>
+                        3. lsscsi --> List SCSI/SATA devices like Hard-drive ,ssd etc. <br>
+                        4. lsusb --> List usb controller . <br>
+                        5. lsblk --> List Bulk devices i.e storage media, Hard-drive,ssd <br>
+                        6. lsmem --> List main mem <br>
+                        Examples:- <br>
+                        <img src="blog3_images/1.png" alt="1st image"> <br> 
+                        <img src="blog3_images/2.png" alt="2nd image"> <br>
+                        Thanks for reading
+                    </p>
+
                 </div>
 
             </div>
