--- a/blogs/blog4.html
+++ b/blogs/blog4.html
@@ -28,14 +28,31 @@
         <div class="main">
             <div class="blogContainer">
                 <h1>Blogs By Gaurav The Great</h1>
-                
+
                 <div class="blogItem">
                     <h2>How to see boot signature(0xaa55) of your bootable device in linux terminal.</h2>
                     <p>In this Article , I will show how you can check whether you storage media(usb
                         drive,Hard-disk,ssd, cd/dvd) is bootable or not in linux terminal.
-                        <br> Disclaimer: for this Root priviliges are required.
+                        <br> Disclaimer: for this Root priviliges are required. <br>
+                        Usage:- dd if=/dev/sd<xxx> count=1 bs=512 | hexdump -C <br>
+                            xxx --means---> device name which will in /dev dir. <br>
+                            Note: use "lsblk" command to list all the storage deives connected to the system. <br>
+                            dd---> device driver command( often use to read/write raw data in storage devices. <br>
+                            if=/dev/sd<xxx> ---means--> it is input file (fromwhere dd command read data ). <br>
+                                count=1 ----> time you need data(eg. I need only one time so i initialize count with 1).
+                                <br>
+                                bs=512 ----> it means you are reading 512Byte date from /dev/sd<xxx> devices <br>
+                                    | hexdump -C ---> we are reading raw data(in binary form), it converts binary data
+                                    to Hexadecimal format <br>
+                                    <img src="blog4_images/1.png" alt="1st image"> <br>
+                                    In Avobe picture at last line right side "55 aa" is highlighted is a boot signature
+                                    of my device /dev/sda. <br>
+                                    Othe than 55aa , remaning data contains first 446Byte represent first stage Boot
+                                    load(executable MBR code ) and remaining 64Byte represent partition table. <br>
+                                    Thank you. 
+
                     </p>
-                    
+
                 </div>
             </div>
         </div>
