emain and phone added in the footer

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
         <div class="col-3">
             <h3>Contact</h3>
             <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
-
+            <p>Email <br> Gauravshakya4030@gmail.com</p>
+            <p>Phone <br> 8303439776</p>
         </div>
     </div>
     <script src="/script.js"></script>
