intro skills and courses added

--- a/blog.html
+++ b/blog.html
@@ -78,7 +78,8 @@
         </div>
         <div class="col-3">
             <h3>Contact</h3>
-            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India <br> <br>
+            Email <br> gauravshakya4030@gmail.com <br> <br> Phone <br> 8303439776 </p>
 
         </div>
     </div>
