--- a/intro.html
+++ b/intro.html
@@ -27,38 +27,121 @@
         <div class="main">
             <div class="infocontainer">
                 <div class="introContainer">
-                    <div class="aboutme">
+                    <div class="aboutmeContainer">
                         <h1>About Me</h1>
-                        <p>My name is Gaurav Gautam Shakya. I belong to Nagla Kunwar Kharbandi Nagla wazir Farrukhabad.There are 8 
-                            people in my family.Father(Shri Atar Singh Shakya) Mother(Smt. Malti Devi Shakya) GrandFather(Shri Patiram
-                            Shakya) GrandMother( Smt. RamDevi Shakya) Elder Sister( Late RajNandini Gautam Shakya) Sister( Nishi Shakya) Elder Brother( Ravi Gautam Shakya)
+                        <p>My name is Gaurav Gautam Shakya. I belong to Nagla Kunwar Kharbandi Nagla wazir
+                            Farrukhabad.There are 8
+                            people in my family.Father(Shri Atar Singh Shakya) Mother(Smt. Malti Devi Shakya)
+                            GrandFather(Shri Patiram
+                            Shakya) GrandMother( Smt. RamDevi Shakya) Elder Sister( Late RajNandini Gautam Shakya)
+                            Sister( Nishi Shakya) Elder Brother( Ravi Gautam Shakya)
                             Middle Brother( Vijay Gautam Shakya) and Me(Youngest). My Father is a Farmer.</p>
                     </div>
 
-                    <div class="education">
+                    <div class="myEducationContainer">
                         <h2>My Education</h2>
                         <h4>B.Tech</h4>
                         <p>Harcourt Butler Technical University <br> Kanpur, India CGPA-6.515 <br> 07/2019 - Present
-                            <br>Courses <br> Electrical Engineering </p>
+                            <br>Courses <br> Electrical Engineering
+                        </p>
                         <h4>InterMediate</h4>
                         <p>SHRI BSDS I C BARRA GHUMAN, HARDOI <br> Hardoi, India Aggregate-85% <br> 07/2016 - 04/2018
-                            <br> PCM</p>
+                            <br> PCM
+                        </p>
                         <h4>High-school</h4>
                         <p>S V M HSS NAGAR B PATTI FARRUKHABAD <br> Farrukhabad, India Aggregate-90% <br> 07/2015 -
                             05/2016 <br> PCM</p>
                     </div>
                     <h2>My Skills</h2>
-                    <div class="mySkillContainer">
-                        <div class="skills">Linux</div>
-                        <div class="skills">Git</div>
-                        <div class="skills">Yaml</div>
-                        <div class="skills">Docker</div>
-                        <div class="skills">Kubernates</div>
-                        <div class="skills">Vagrant</div>
-                        <div class="skills">Ansible</div>
-                        <div class="skills">BA$H</div>
+                    <div class="mySkillsContainer">
+                        <h4>Linux</h4>
+                        <p>Desciption</p>
+                        <h4>Git</h4>
+                        <p>Desciption</p>
+                        <h4>Yaml</h4>
+                        <p>Desciption</p>
+                        <h4>Docker</h4>
+                        <p>Desciption</p>
+                        <h4>Kubernetes</h4>
+                        <p>Desciption</p>
+                        <h4>Vagrant</h4>
+                        <p>Desciption</p>
+                        <h4>Ansible</h4>
+                        <p>Desciption</p>
+                        <h4>BA$H</h4>
+                        <p>Desciption</p>
+
+                    </div>
+                    <h2>Courses</h2>
+                    <div class="myCoursesContainer">
+                        <div class="nptel">
+                            <h4>NPTEL Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                        </div>
+                        <div class="udemy">
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+                            <h4>Course Title</h4>
+                            <p>Desciption</p>
+
+                        </div>
+
                     </div>
                 </div>
+
+
+
+
+
+
                 <div class="devpic"> <img src="images/devPic.png" alt="Gaurav Gautam Shakya"> </div>
             </div>
         </div>
@@ -83,7 +166,8 @@
         </div>
         <div class="col-3">
             <h3>Contact</h3>
-            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India </p>
+            <p>Nagla Kunwar Kharbandi Nagla wazir <br> Farrukhabad, 209625 <br> Uttar Pradesh, India <br> <br>
+                Email <br> gauravshakya4030@gmail.com <br> <br> Phone <br> 8303439776</p>
 
         </div>
     </div>
