--- a/intro.html
+++ b/intro.html
@@ -75,61 +75,55 @@
                     <h2>Courses</h2>
                     <div class="myCoursesContainer">
                         <div class="nptel">
-                            <h4>NPTEL Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
-                            <h4>Course Title</h4>
-                            <p>Desciption</p>
+                            <h4> <a href="https://nptel.ac.in/courses/106102229">Advanced Computer Architecture(NPTEL Certification) </a> </h4>
+                            <p>Advanced Computer Architecture(12 week) program. Instructor- Dr. Smruti R. Sarangi
+                                Associate Professor in the Computer Science and Engineering department at IIT Delhi.
+                            </p>
+
                         </div>
                         <div class="udemy">
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/datastructurescncpp/">Mastering Data Structures & Algorithms using C and C++ </a> </h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"> The Complete 2023 Web Development Bootcamp</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/developing-a-multithreaded-kernel-from-scratch/"> Developing a Multithreaded Kernel From Scratch!</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/advanced-linux-administration/"> Advanced Linux System Administration</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/developer-to-architect/"> Software Architecture & Technology of Large-Scale Systems</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/preparing-to-certified-openstack-administrator-coa-exam/">Preparing to Certified OpenStack Administrator (COA) Exam</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/openstack-installation-and-deployment/"> OpenStack Installation and Deployment </a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/jenkins-from-zero-to-hero/">Jenkins, From Zero To Hero: Become a DevOps Jenkins Master </a> </h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/microsoft-az-301-certification-azure-architect-design/"> AZ-305 : Azure Architect Design Certification Prep </a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/aws-certified-associate-architect-developer-sysops-admin/"> Amazon Web Services (AWS) Certified - 4 Certifications!</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/containers-under-the-hood/"> Containers Under the Hood</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/new-comptia-a-2019-certification-1001-the-total-course/"> CompTIA A+ Certification (220-1001)</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4> <a href="https://www.udemy.com/course/new-comptia-a-2019-certification-1002-the-total-course/"> CompTIA A+ Certification (220-1002)</a></h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            
+                            <h4><a href="https://www.udemy.com/course/how-to-build-a-gaming-pc/">How to Build a Custom Gaming PC</a> </h4>
                             <p>Desciption</p>
-                            <h4>Course Title</h4>
+                            <h4><a href="https://www.udemy.com/course/ethical-hacking-and-comptia-pentest-exam-prep-pt0-001/"> CompTIA PenTest+ (Ethical Hacking) + 2 FREE Tests</a></h4>
+                            <p>Desciption</p>
+                            <h4><a href="https://www.udemy.com/course/full-ethical-hacking-course/"> Full Ethical Hacking Course</a></h4>
+                            <p>Desciption</p>
+                            <h4><a href="https://www.udemy.com/course/arduino-sbs-17gs/"> Arduino Step by Step: Getting Started </a></h4>
+                            <p>Desciption</p>
+                            <h4> <a href="https://www.udemy.com/course/arduino-sbs-getting-serious/">Arduino Step by Step Getting Serious </a> </h4>
+                            <p>Desciption</p>
+                            <h4> <a href="https://www.udemy.com/course/crash-course-electronics-and-pcb-design/"> Crash Course Electronics and PCB Design</a></h4>
+                            <p>Desciption</p>
+                            <h4> <a href="https://www.udemy.com/course/the-data-science-course-complete-data-science-bootcamp/"> The Data Science Course 2023: Complete Data Science Bootcamp </a></h4>
+                            <p>Desciption</p>
+                            <h4> <a href="https://www.udemy.com/course/build-your-blockchain-az/"> Blockchain A-Z™: Learn How To Build Your First Blockchain </a></h4>
                             <p>Desciption</p>
 
                         </div>
