blog.html contact.html services.html updated

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <div class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="/"> Home</a></li>
+                    <li><a href="index.html"> Home</a></li>
                     <li><a href="intro.html"  rel="noopener noreferrer"> My Intro</a></li>
                     <li> <a href="services.html"  rel="noopener noreferrer"> Services</a></li>
                     <li><a href="blog.html"  rel="noopener noreferrer">Blog</a></li>
