--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <div class="main">
             <div class="contactform">
                 <h1>Contact me for More Information </h1>
-                <form  action="thankyou.html">
+                <form  action="thankyou.html"  method="post">
                     <div class="form-group">
                         <label for="name" class="form-lable">Name</label>
                         <input type="name" class="form-control" id="name" aria-describedby="emailHelp"
